resolve sidebar menu flicker when open submenu

--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -1,10 +1,9 @@
 .app-sidebar {
-    overflow: auto;
+    overflow: hidden;
     height: 100vh;
     position: fixed;
     left: 0;
     top: 0;
-    bottom: 0;
     z-index: 1;
     box-shadow: rgb(125, 108, 108) 4px 0 3px -1px;
 }
@@ -19,7 +18,7 @@
     background: rgba(255, 255, 255, 0.2);
 }
 .app-sidebar-menu-wrap {
-    height: calc(100vh - 112px);
+    max-height: calc(100vh - 112px);
     overflow-x: hidden ;
     overflow-y: auto;
 }
