--- a/src/assets/less/variables.less
+++ b/src/assets/less/variables.less
@@ -4,3 +4,6 @@
 // make animation fast by default
 @animation-duration-slow: 0.1s;
 @animation-duration-base: 0.1s;
+@animation-duration-fast: 0.05s;
+
+@menu-animation-duration-normal: 0.1s;
